--- a/index.html
+++ b/index.html
@@ -15,82 +15,178 @@
 
                 <ul id="ul-list">
                     <li><a href="" class="nav-item">Home</a></li>
-                    <li><a href="" class="nav-item">About Us</a></li>
                     <li><a href="" class="nav-item">Shop</a></li>
-                    <li><a href="" class="nav-item">Blog</a></li>
-                    <li><a href="" class="nav-item">Pages</a></li>
+                    <li><a href="" class="nav-item">Contact</a></li>
+                    <li><a href="" class="nav-item">My Cart</a></li>
                 </ul>
-                <button class="btn"><a href="">Contact Us</a></button>
+                <button class="btn"><a href="">Log In</a></button>
             </nav>
 
             <div class="header-text">
-                <h1>Colorful Dreams, <b> Transformed into Reality</h1>
-                <h2>“There's no greater joy than that of new art supplies.”</h2>
+                <h2>ARTS & CRAFTS SUPPLIES <br> FOR EVERYONE</h2>
+                <h4>“There's no greater joy than that of new art supplies.”</h4>
             </div>
 
             <div>
-                <button class="about-btn" id="btn-btn">Store</button>
+                <button class="about-btn" id="btn-btn">Shop Now</button>
             </div>
         </header>
 
 
-<section class="about-section">
-<div class="about-text">
-<h2>About Us</h2>
-<p>The aim of art is to represent not the outward appearance of things, <br> but their inward significance.</p>
-<button class="about-btn"><a href="">Buy Now</a></button>
+<section class="serve-section">
+<div class="serve-text">
+<h5>SHOP BY CATEGORIES</h5>
+
 </div>
 
-<div>
-    <img src="./images/paint2.jpg" alt="props">
-    <img src="./images/paint1.jpg" alt=" brushes">
+<div class="parent">
+    <img src="./images/potterytools.jpg" alt="potterytools">
+    <img src="./images/Watercolor Paint.jpeg" alt=" watercolorpaints">
+    <img src="./images/artistbrushes.jpg" alt="brushes">
+    <img src="./images/paint1.jpg" alt="acrylicpaint">
 </div>
 </section>
 
 <section class="serve-section">
+    <hr>
     <div class="serve-text">
-        <h2>WHAT WE SERVE</h2>
-        <h5>We Provide Top  Art Materials</h5>
-        <p>We provide artist materials such as acrylic paints, brushes, charcoal pencils and all that artists need to bring imaginary pictures into reality.</p>
+        <h5>SHOP FAVORITES</h5> 
+        <hr>
+       
     </div>
 
+<div class="parent">
+  
 
-<div class="serve-images">
-
-    <div class="image">
-        <img src="./images/acrylicpaint.jpg" alt="acylicpaints">
-        <h4><a href=""> Emooqi Acrylic Paint</a></h4>
+    <div>
+        <img src="./images/Pentel Washable Oil Pastels.jpeg" alt="kneadederaser-pencils">
+        <h5>Pentel Washable Oil Pastels</h5>
+        <h6>GHS 80.00</h6>
+        <button>Add to Cart</button>
     </div>
     
-    <div class="image">
-        <img src="./images/brushes.jpg" alt="brushes">
-        <h4><a href="">Artist Brushes</a></h4>
+    <div>
+        <img src="./images/Oil and Chalk Pastels in Grade Two.jpeg" alt="brushes">
+        <h5>Faber-Castell Oil & Chalk Pastel</h5>
+        <h6>GHS 80.00</h6>
+        <button>Add to Cart</button>
     </div>
 
+    <div>
+       <img src="./images/kneadederaser-pencil2.jpeg" alt="colouredpencils">
+       <h5>Professional Drawing Set</h5>
+       <h6>GHS 80.00</h6>
+       <button>Add to Cart</button>
+    </div>
 
+    <div>
+        <img src="./images/blackpenpoint5.jpeg" alt="paints">
+        <h5>Pigment Liner</h5>
+        <h6>GHS 80.00</h6>
+        <button>Add to Cart</button>
+    </div>
 
-<div class="image">
-    <img src="./images/coloredpencils.jpg" alt="colouredpencils">
-    <h4><a href="">Colour Pencils</a></h4>
+    <div>
+        <img src="./images/File Folder Racks & Holders.jpeg" alt="pencils">
+        <h5>File Folder Racks & Holders</h5>
+        <h6>GHS 80.00</h6>
+        <button>Add to Cart</button>
+    </div>
+
+    <div>
+        <img src="./images/mesh-can.jpeg" alt="palletteknives">
+        <h5>Mesh Pen Holder</h5>
+        <h6>GHS 80.00</h6>
+        <button>Add to Cart</button>
+    </div>
+
+    <div>
+        <img src="./images/sketchbook.jpeg" alt="">
+        <h5>Sketch Book</h5>
+        <h6>GHS 80.00</h6>
+        <button>Add to Cart</button>
+    </div>
+
+    <div>
+        <img src="./images/stick-notes.jpeg" alt="">
+        <h5>Stick Notes</h5>
+        <h6>GHS 80.00</h6>
+        <button>Add to Cart</button>
+    </div>
 </div>
 
-<div class="image">
-    <img src="./images/paint2.jpg" alt="paints">
-    <h4><a href="">Acrylic Tube Paints</a></h4>
+<div class="border">
+    <h2>NEW PRODUCTS <br> ARRIVING EACH WEEK!</h2>
+    <P>"There's no greater joy than that of new art supplies".</P>
+    <button>Shop Now</button>
 </div>
 
-<div class="image">
-    <img src="./images/charcoalpencil2.jpg" alt="pencils">
-    <h4><a href="">Chacoal Pencil</a></h4>
-</div>
 
-<div class="image">
-    <img src="./images/palleteknives1.jpg" alt="palletteknives">
-    <h4><a href="">Pallette Knives</a></h4>
-</div>
+<section class="serve-section">
+      <div class="serve-text">
+      <h5>SHOP OFFERS</h5>
+      </div>
+</section>
+
+
+<div class="parent">
+    <div>
+       <img src="./images/charcoalpowder.jpg" alt="">
+       <h5>Charcoal Powder</h5>
+       <h6>GHS 80.00</h6>
+       <button>Shop Now</button>
+    </div>
+
+    <div>
+        <img src="./images/chisel-set.jpg" alt="">
+        <h5>Chisel set</h5>
+        <h6>GHS 80.00</h6>
+        <button>Shop Now</button>
+     </div>
+
+     <div>
+        <img src="./images/kneadederasers.jpg" alt="">
+        <h5>Kneaded Easers</h5>
+        <h6>GHS 80.00</h6>
+        <button>Shop Now</button>
+     </div>
+
+    <div>
+        <img src="./images/graphitepowder.jpg" alt="">
+        <h5>Graphite Powder</h5>
+        <h6>GHS 80.00</h6>
+        <button>Shop Now</button>
+     </div>
+
+     <div>
+        <img src="./images/blendingstump.jpg" alt="">
+        <h5>Blending Stump</h5>
+        <h6>GHS 80.00</h6>
+        <button>Shop Now</button>
+     </div>
+
+     <div>
+        <img src="./images/whitecharcoalpencil.jpg" alt="">
+        <h5>White Charcoal Pencil</h5>
+        <h6>GHS 80.00</h6>
+        <button>Shop Now</button>
+     </div>
+
+     <div>
+        <img src="./images/artistbrushes.jpg" alt="">
+        <h5>Art Brushes</h5>
+        <h6>GHS 80.00</h6>
+        <button>Shop Now</button>
+     </div>
+
+     <div>
+        <img src="./images/fixative.jpg" alt="">
+        <h5>Fixative</h5>
+        <h6>GHS 80.00</h6>
+        <button>Shop Now</button>
+     </div>
 
 </div>
-
 
     <div class="serve-btn">
         <button class="about-btn" id="btn-btn">View More</button>
