--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <nav id="nav-links">
                 <a href="" id="logo"> THE ART <br> STATION</a>
 
-                <ul id="ul-list">
-                    <li><a href="" class="nav-item">Home</a></li>
+            <ul id="ul-list">
+                    <li><a href=""class="nav-item">Home</a></li>
                     <li><a href="" class="nav-item">Shop</a></li>
                     <li><a href="" class="nav-item">Contact</a></li>
                     <li><a href="" class="nav-item">My Cart</a></li>
-                </ul>
+            </ul>
                 <button class="btn"><a href="">Log In</a></button>
             </nav>
 
@@ -50,6 +50,12 @@
     <img src="./images/Watercolor Paint.jpeg" alt=" watercolorpaints">
     <img src="./images/artistbrushes.jpg" alt="brushes">
     <img src="./images/paint1.jpg" alt="acrylicpaint">
+    <img src="./images/paperclips.jpeg" alt="canvas-set">
+    <img src="./images/kneadederaser-pencils.jpeg" alt="canvas-set">
+    <img src="./images/acrylicpaints.jpeg" alt="canvas-set">
+    <img src="./images/canvas-set.jpg" alt="canvas-set">
+
+    
 </div>
 </section>
 
