--- a/index.html
+++ b/index.html
@@ -70,56 +70,56 @@
 <div class="parent">
   
 
-    <div>
+    <div class="fav">
         <img src="./images/Pentel Washable Oil Pastels.jpeg" alt="kneadederaser-pencils">
         <h5>Pentel Washable Oil Pastels</h5>
         <h6>GHS 80.00</h6>
         <button>Add to Cart</button>
     </div>
     
-    <div>
+    <div class="fav">
         <img src="./images/Oil and Chalk Pastels in Grade Two.jpeg" alt="brushes">
         <h5>Faber-Castell Oil & Chalk Pastel</h5>
         <h6>GHS 80.00</h6>
         <button>Add to Cart</button>
     </div>
 
-    <div>
+    <div class="fav">
        <img src="./images/kneadederaser-pencil2.jpeg" alt="colouredpencils">
        <h5>Professional Drawing Set</h5>
        <h6>GHS 80.00</h6>
        <button>Add to Cart</button>
     </div>
 
-    <div>
+    <div class="fav">
         <img src="./images/blackpenpoint5.jpeg" alt="paints">
         <h5>Pigment Liner</h5>
         <h6>GHS 80.00</h6>
         <button>Add to Cart</button>
     </div>
 
-    <div>
+    <div class="fav">
         <img src="./images/File Folder Racks & Holders.jpeg" alt="pencils">
         <h5>File Folder Racks & Holders</h5>
         <h6>GHS 80.00</h6>
         <button>Add to Cart</button>
     </div>
 
-    <div>
+    <div class="fav">
         <img src="./images/mesh-can.jpeg" alt="palletteknives">
         <h5>Mesh Pen Holder</h5>
         <h6>GHS 80.00</h6>
         <button>Add to Cart</button>
     </div>
 
-    <div>
+    <div class="fav">
         <img src="./images/sketchbook.jpeg" alt="">
         <h5>Sketch Book</h5>
         <h6>GHS 80.00</h6>
         <button>Add to Cart</button>
     </div>
 
-    <div>
+    <div class="fav">
         <img src="./images/stick-notes.jpeg" alt="">
         <h5>Stick Notes</h5>
         <h6>GHS 80.00</h6>
@@ -144,56 +144,56 @@
 
 
 <div class="parent">
-    <div>
+    <div class="fav">
        <img src="./images/charcoalpowder.jpg" alt="">
        <h5>Charcoal Powder</h5>
        <h6>GHS 80.00</h6>
        <button>Shop Now</button>
     </div>
 
-    <div>
+    <div class="fav">
         <img src="./images/chisel-set.jpg" alt="">
         <h5>Chisel set</h5>
         <h6>GHS 80.00</h6>
         <button>Shop Now</button>
      </div>
 
-     <div>
+     <div class="fav">
         <img src="./images/kneadederasers.jpg" alt="">
         <h5>Kneaded Easers</h5>
         <h6>GHS 80.00</h6>
         <button>Shop Now</button>
      </div>
 
-    <div>
+    <div class="fav">
         <img src="./images/graphitepowder.jpg" alt="">
         <h5>Graphite Powder</h5>
         <h6>GHS 80.00</h6>
         <button>Shop Now</button>
      </div>
 
-     <div>
+     <div class="fav">
         <img src="./images/blendingstump.jpg" alt="">
         <h5>Blending Stump</h5>
         <h6>GHS 80.00</h6>
         <button>Shop Now</button>
      </div>
 
-     <div>
+     <div class="fav">
         <img src="./images/whitecharcoalpencil.jpg" alt="">
         <h5>White Charcoal Pencil</h5>
         <h6>GHS 80.00</h6>
         <button>Shop Now</button>
      </div>
 
-     <div>
+     <div class="fav">
         <img src="./images/artistbrushes.jpg" alt="">
         <h5>Art Brushes</h5>
         <h6>GHS 80.00</h6>
         <button>Shop Now</button>
      </div>
 
-     <div>
+     <div class="fav">
         <img src="./images/fixative.jpg" alt="">
         <h5>Fixative</h5>
         <h6>GHS 80.00</h6>
@@ -203,9 +203,14 @@
 </div>
 
     <div class="serve-btn">
-        <button class="about-btn" id="btn-btn">View More</button>
+        <button class="about-btn" id="view"><a href="">View More</a></button>
     </div>
 </section>
+
+
+
+
+<script src="./js/index.js"></script>
 </div>
 </body>
 </html>
