--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
         <header id="header-bg">
             <nav id="nav-links">
-                <a href="" id="logo"> THE ART <br> STATION</a>
+                <a href="https://www.instagram.com/emmie_jenns?igsh=MXM3ZDFxbXpzYmJucg==" " id="logo"> THE ART <br> STATION</a>
 
             <ul id="ul-list">
                     <li><a href=""class="nav-item">Home</a></li>
@@ -19,7 +19,7 @@
                     <li><a href="" class="nav-item">Contact</a></li>
                     <li><a href="" class="nav-item">My Cart</a></li>
             </ul>
-                <button class="btn"><a href="">Log In</a></button>
+                <button class="btn" id="Log"><a href="">Log In</a></button>
             </nav>
 
             <div class="header-text">
@@ -46,14 +46,38 @@
 </div>
 
 <div class="parent">
+
+    <div class="fav">
     <img src="./images/potterytools.jpg" alt="potterytools">
+    </div>
+
+    <div class="fav">
     <img src="./images/Watercolor Paint.jpeg" alt=" watercolorpaints">
+    </div>
+
+    <div class="fav">
     <img src="./images/artistbrushes.jpg" alt="brushes">
+    </div>
+
+    <div class="fav">
     <img src="./images/paint1.jpg" alt="acrylicpaint">
+    </div>
+
+    <div class="fav">
     <img src="./images/paperclips.jpeg" alt="canvas-set">
+    </div>
+
+    <div class="fav">
     <img src="./images/kneadederaser-pencils.jpeg" alt="canvas-set">
+    </div>
+
+    <div class="fav">
     <img src="./images/acrylicpaints.jpeg" alt="canvas-set">
+    </div>
+    
+    <div class="fav">
     <img src="./images/canvas-set.jpg" alt="canvas-set">
+    </div>
 
     
 </div>
@@ -130,7 +154,7 @@
 <div class="border">
     <h2>NEW PRODUCTS <br> ARRIVING EACH WEEK!</h2>
     <P>"There's no greater joy than that of new art supplies".</P>
-    <button>Shop Now</button>
+    <button class="about-btn" id="shop-now">Shop Now</button>
 </div>
 
 
@@ -203,11 +227,29 @@
 </div>
 
     <div class="serve-btn">
-        <button class="about-btn" id="view"><a href="">View More</a></button>
+        <button class="about-btn" id="view">View More</button>
     </div>
 </section>
 
+<!-- <footer>
+    <div>
+        <h4>INFORMATION:</h4>
+        <p>HOME <br> SEARCH <br> ABOUT US <br> CONTACT US <br> BLOG</p>
+    </div>
 
+    <div>
+        <h4>MY ACCOUNT:</h4>
+        <p>SIGN IN <br> </p>
+    </div>
+
+    <div>
+        <h4>PRODUCTS:</h4>
+    </div>
+
+    <div>
+        <h4>FOLLOW US:</h4>
+    </div>
+</footer> -->
 
 
 <script src="./js/index.js"></script>
